force-app/main/default/objects/Contact/fields/Interest1__c.field-meta.xml
<CustomField>
    <fullName>Interest1__c</fullName>
    <label>Interest 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genre</valueSetName>
    </valueSet>
</CustomField>