force-app/main/default/objects/Contact/fields/Interest2__c.field-meta.xml
<CustomField>
    <fullName>Interest2__c</fullName>
    <label>Interest 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genre</valueSetName>
    </valueSet>
</CustomField>