force-app/main/default/objects/Contact/fields/Interest3__c.field-meta.xml
<CustomField>
    <fullName>Interest3__c</fullName>
    <label>Interest 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Genre</valueSetName>
    </valueSet>
</CustomField>